# green_jacket

./: .gitignore  docker-compose.yml  pyproject.toml
green_jacket/: manage.py
green_jacket/green_jacket/: asgi.py  settings.py  urls.py  wsgi.py
green_jacket/green_jacket_app/: apps.py  models.py  urls.py  views.py
green_jacket/green_jacket_app/migrations/: 0001_initial.py  0002_brandmodel_image_url.py  0003_brandmodel_tarif.py  0004_remove_brandmodel_shop_cart_shopcart_brand_model.py  0005_favorite_delete_shopcart.py  0006_brandmodel_favorite.py
green_jacket/green_jacket_app/static/css/: styles.css
green_jacket/green_jacket_app/templates/green_jacket/: base.html  brand_models.html  brands.html  green_score.html  home.html  toto.html
green_jacket/green_jacket_app/templates/registration/: login copy.html  signup.html
