[tool.poetry]
name = "green-jacket"
version = "0.1.0"
description = ""
authors = ["clement <clementsergent@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.6"
django-debug-toolbar = "^4.2.0"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
